[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/rigid_body_player/Yaw.gd" type="Script" id=1]
[ext_resource path="res://characters/rigid_body_player/Body.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/right_footstep_gravel.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/left_footstep_gravel.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/left_footstep_wood.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/right_footstep_wood.wav" type="AudioStream" id=7]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RayShape" id=2]
margin = 0.05
length = 1.3

[sub_resource type="CapsuleShape" id=3]
radius = 0.2

[node name="Body" type="RigidBody"]
collision_layer = 2
collision_mask = 245
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 4.0
continuous_cd = true
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.3, 0 )
shape = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
collision_mask = 245

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 3 )

[node name="Yaw" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0 )
script = ExtResource( 1 )

[node name="Pitch" type="Spatial" parent="Yaw"]

[node name="Camera" type="Camera" parent="Yaw/Pitch"]
transform = Transform( 1, 0, 0, 0, 0.93946, 0.34266, 0, -0.34266, 0.93946, 0, 0.435, 1.081 )
current = true

[node name="Camera2" type="Camera" parent="Yaw/Pitch"]
current = true

[node name="FootStepTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.45
autostart = true

[node name="GravelLeftFootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="GravelRightFootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="WoodLeftFootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="WoodRightFootPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="timeout" from="FootStepTimer" to="." method="_on_FootStepTimer_timeout"]
